pmd integration